--- a/src/sections/footer.css
+++ b/src/sections/footer.css
@@ -5,6 +5,7 @@ body{
   
   .footer{
   background:#000;
+  color: white;
   padding:30px 0px;
   font-family: 'Play', sans-serif;
   text-align:center;
