--- a/src/sections/HeroSection.css
+++ b/src/sections/HeroSection.css
@@ -46,7 +46,7 @@ line-height: 90%;
     margin:20px  0px;
 font-size: 1.5rem;
 font-weight: 600;
-text-shadow: 2px 0px  2px black;
+text-shadow: 0px 0px  2px rgb(69, 69, 69);
 
 }
 @media (max-width:800px)
