--- a/src/sections/Whitelist.css
+++ b/src/sections/Whitelist.css
@@ -1,41 +1,46 @@
-.whitelist-cont{
+.whitelist-cont {
     min-height: 100vh;
     align-items: center;
     display: flex;
     justify-content: center;
 }
-.whitelist-cont div{
+
+.whitelist-cont div {
     width: 100%;
     display: flex;
-    
+
     /* padding: 20px; */
 }
-.whitelist-info{
-  
+
+.whitelist-info {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 5vw;
 }
-.whitelist-img{
-    align-items: center;
-justify-content: center;
-}
-.whitelist-info form{
-outline: none;
-margin:10px 0px;
-height: 6vh;
-z-index: 1;
 
-overflow: hidden;
-/* padding: 0px; */
-border-radius:50px;
-border: 2px solid rgb(202, 202, 202);
+.whitelist-img {
+    align-items: center;
+    justify-content: center;
 }
-.whitelist-info button{
+
+.whitelist-info form {
+    outline: none;
+    margin: 10px 0px;
+    height: 6vh;
+    z-index: 1;
+
+    overflow: hidden;
+    /* padding: 0px; */
+    border-radius: 50px;
+    border: 2px solid rgb(202, 202, 202);
+}
+
+.whitelist-info button {
     width: 40%;
- font-weight: 700;
- font-size: 1.2rem;
+    font-weight: 700;
+    font-size: 1.2rem;
     position: relative;
     /* top: -1px; */
     background-color: #0086FB;
@@ -43,37 +48,41 @@ border: 2px solid rgb(202, 202, 202);
     outline: none;
     border: none;
     height: 6vh;
-z-index: 2;
+    z-index: 2;
 }
 
-.whitelist-info input{
+.whitelist-info input {
     height: 6vh;
-
     outline: none;
     border: none;
     padding: 20px;
-width: 60%;
+    width: 60%;
 }
-.whitelist-icons{
+
+.whitelist-icons {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.icon-child{
+
+.icon-child {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:100px;
+    width: 100px;
 }
-.icon-child img{
-   height: 50px;
+
+.icon-child img {
+    height: 50px;
 }
-@media  only screen and (max-width: 600px) 
-{.whitelist-cont{
-    flex-direction: column;
-}
-.whitelist-img img{
-height: 50%;
-}
+
+@media only screen and (max-width: 600px) {
+    .whitelist-cont {
+        flex-direction: column;
+    }
+
+    .whitelist-img img {
+        height: 50%;
+    }
 
 }
