--- a/src/sections/footer.css
+++ b/src/sections/footer.css
@@ -49,7 +49,7 @@ body{
   .footer .row:nth-child(1){margin: 0 auto;
     display: flex;
     width: 20%;
-    min-width: 350px;
+    /* min-width: 350px; */
     align-items: center;
     justify-content: space-around;
   }
@@ -57,6 +57,7 @@ body{
 display: flex;
 flex-direction: column;
 align-items: center;
+margin: 5px;
 font-weight: 700;
   }
 
