--- a/src/sections/Cards.css
+++ b/src/sections/Cards.css
@@ -171,3 +171,8 @@ padding:10px 20px;
     text-decoration: none;
     cursor: pointer;
   }
+  @media only screen and (max-width: 600px){
+      .modal-content{
+          width: 90vw;
+      }
+  }
