--- a/src/sections/second.css
+++ b/src/sections/second.css
@@ -4,7 +4,7 @@
     color: white;
     width: 100%;
     display: flex;
-    height:100vh;
+min-height: 100vh;
     font-family: 'Poppins', sans-serif;
     /* height: 100vh; */
     }
