--- a/src/sections/sixth.css
+++ b/src/sections/sixth.css
@@ -108,3 +108,19 @@ text-align: center;
     color: white;
     width: 60%;
 }
+@media  only screen and (max-width: 600px){
+    
+
+.btn{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.ph-child{
+    height: 180px;
+
+
+}
+
+
+}
