--- a/src/sections/fifth.css
+++ b/src/sections/fifth.css
@@ -21,11 +21,9 @@
     .text2{
         width: 100%;
         display: flex;
-        flex-direction: column
-        ;
-        padding: 5vh;
+        flex-direction: column;
         height: 100%;
-        /* background-color: antiquewhite; */
+        
     }
    
     .img-fifth{
