--- a/src/sections/fourth.css
+++ b/src/sections/fourth.css
@@ -7,11 +7,12 @@
 
 .text2{
     background-color: white;
-  
+
     width: 100%;
     display: flex;
     font-family: 'Poppins', sans-serif;
     height: 100px;
+background-color: pink;
     }
  
 
@@ -23,4 +24,5 @@
         .title2{
             font-size: 3rem;
         }
-    }
+
+   }
