--- a/src/sections/second.css
+++ b/src/sections/second.css
@@ -63,7 +63,7 @@ min-height: 100vh;
         width: 80%;
         display: flex;
         flex-direction: column;
-        padding: 3vh;
+        padding-top: 3vh;
         justify-content: center; 
                height: 100%;
         /* background-color: antiquewhite; */
@@ -111,6 +111,7 @@ min-height: 100vh;
         flex-direction: column;
         font-weight: 600;
         align-items: center;
+        padding: 2vh;
     
     }
     .text2 span:nth-child(3){
@@ -141,6 +142,10 @@ margin-top: 2vh;
 
 
     @media  only screen and (max-width: 600px) {
+        
+        #second{
+            width: 80vw;
+        }
         .d1
         {
             flex-direction: column;
@@ -157,7 +162,7 @@ margin-top: 2vh;
        
         }
         .grind img{
-            width: 80vw;
+            width: 100vw;
             
                 }
     }
