--- a/src/sections/sixth.css
+++ b/src/sections/sixth.css
@@ -18,6 +18,11 @@ align-items: center;
     text-align: center;
     width: 100%;
  }
+ .inside-button{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+ }
  .photo{
      background-color: black;
 color: white;
@@ -102,6 +107,7 @@ text-align: center;
     border-radius: 50px;
     padding: 20px;
     width: 80%;
+    margin-top: 10px;
 }
 .btn2{
     background-color: #000;
@@ -110,7 +116,9 @@ text-align: center;
 }
 @media  only screen and (max-width: 600px){
     
-
+.inp{
+    width: 100%;
+}
 .btn{
 
     align-items: center;
